final migration to SMILE from WEKA